--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,6 +16,8 @@ jobs:
 
     - uses: actions/checkout@v4
 
+    - uses: docker/setup-qemu-action@v3
+
     - name: Install vcs
       run: pip3 install vcstool
 
