--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,6 +17,8 @@ jobs:
     - uses: actions/checkout@v4
 
     - uses: docker/setup-qemu-action@v3
+      with:
+        platforms: linux/arm64
 
     - name: Install vcs
       run: pip3 install vcstool
