--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Install vcs
       run: pip3 install vcstool
 
+    - name: Check QEMU
+      run: ls /proc/sys/fs/binfmt_misc/qemu-arm
+
     - name: Build cabot-people 
       run: | 
         git clone https://github.com/CMU-cabot/cabot-people
