--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,7 +3,7 @@ name: Build Docker Image
 on: [ workflow_dispatch ]
 
 jobs:
-  build-people:
+  build-people-jetson:
     runs-on: ubuntu-20.04
     steps:
     - name: Maximize build space
@@ -30,3 +30,31 @@ jobs:
         cd ./cabot-people
         ./setup-dependency.sh
         ./build-docker.sh -p -i -w -c realsense aarch64
+
+  build-people-framos-jetson:
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Maximize build space
+      run:  |
+            sudo rm -rf /usr/local/lib/android # will release about 10 GB if you don't need Android
+            sudo rm -rf /usr/share/dotnet # will release about 20GB if you don't need .NET
+            sudo rm -rf /opt/ghc
+            echo "Available storage:"
+            df -h
+
+    - uses: actions/checkout@v4
+
+    - uses: docker/setup-qemu-action@v3
+
+    - name: Install vcs
+      run: pip3 install vcstool
+
+    - name: Check QEMU
+      run: ls /proc/sys/fs/binfmt_misc/qemu-arm
+
+    - name: Build cabot-people 
+      run: | 
+        git clone -b support-qemu-build https://github.com/CMU-cabot/cabot-people
+        cd ./cabot-people
+        ./setup-dependency.sh
+        ./build-docker.sh -p -i -w -c framos aarch64
