--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
         type: string
 
 jobs:
-  triage:
+  reusable_workflow_job:
     runs-on: ubuntu-20.04
     steps:
     - name: Maximize build space
