--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,7 +16,10 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - uses: docker/setup-qemu-action@v3
+#    - uses: docker/setup-qemu-action@v3
+    - name: Install QEMU
+      run:  |
+        sudo apt-get install -y qemu binfmt-support qemu-user-static
 
     - name: Install vcs
       run: pip3 install vcstool
@@ -44,7 +47,10 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - uses: docker/setup-qemu-action@v3
+#    - uses: docker/setup-qemu-action@v3
+    - name: Install QEMU
+      run:  |
+        sudo apt-get install -y qemu binfmt-support qemu-user-static
 
     - name: Install vcs
       run: pip3 install vcstool
@@ -103,7 +109,10 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - uses: docker/setup-qemu-action@v3
+#    - uses: docker/setup-qemu-action@v3
+    - name: Install QEMU
+      run:  |
+        sudo apt-get install -y qemu binfmt-support qemu-user-static
 
     - name: Install vcs
       run: pip3 install vcstool
