--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,10 +16,9 @@ jobs:
 
     - uses: actions/checkout@v4
 
-#    - uses: docker/setup-qemu-action@v3
-    - name: Install QEMU
-      run:  |
-        sudo apt-get install -y qemu binfmt-support qemu-user-static
+    - uses: docker/setup-qemu-action@v3
+
+    - uses: docker/setup-buildx-action@v3
 
     - name: Install vcs
       run: pip3 install vcstool
@@ -47,10 +46,9 @@ jobs:
 
     - uses: actions/checkout@v4
 
-#    - uses: docker/setup-qemu-action@v3
-    - name: Install QEMU
-      run:  |
-        sudo apt-get install -y qemu binfmt-support qemu-user-static
+    - uses: docker/setup-qemu-action@v3
+
+    - uses: docker/setup-buildx-action@v3
 
     - name: Install vcs
       run: pip3 install vcstool
@@ -78,10 +76,9 @@ jobs:
 
     - uses: actions/checkout@v4
 
-#    - uses: docker/setup-qemu-action@v3
-    - name: Install QEMU
-      run:  |
-        sudo apt-get install -y qemu binfmt-support qemu-user-static
+    - uses: docker/setup-qemu-action@v3
+
+    - uses: docker/setup-buildx-action@v3
 
     - name: Install vcs
       run: pip3 install vcstool
@@ -109,10 +106,9 @@ jobs:
 
     - uses: actions/checkout@v4
 
-#    - uses: docker/setup-qemu-action@v3
-    - name: Install QEMU
-      run:  |
-        sudo apt-get install -y qemu binfmt-support qemu-user-static
+    - uses: docker/setup-qemu-action@v3
+
+    - uses: docker/setup-buildx-action@v3
 
     - name: Install vcs
       run: pip3 install vcstool
