--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,8 +18,6 @@ jobs:
 
     - uses: docker/setup-qemu-action@v3
 
-    - uses: docker/setup-buildx-action@v3
-
     - name: Install vcs
       run: pip3 install vcstool
 
@@ -47,8 +45,6 @@ jobs:
     - uses: actions/checkout@v4
 
     - uses: docker/setup-qemu-action@v3
-
-    - uses: docker/setup-buildx-action@v3
 
     - name: Install vcs
       run: pip3 install vcstool
@@ -78,8 +74,6 @@ jobs:
 
     - uses: docker/setup-qemu-action@v3
 
-    - uses: docker/setup-buildx-action@v3
-
     - name: Install vcs
       run: pip3 install vcstool
 
@@ -91,6 +85,7 @@ jobs:
         cd ./cabot-common
         git checkout -b support-qemu-build origin/support-qemu-build
         cd ../
+        sed -i 's:make -j$(nproc):make -j3:' docker/opencv/Dockerfile.jetson
         ./build-docker.sh -p -i -w -c realsense aarch64
 
   build-people-framos-jetson:
@@ -108,8 +103,6 @@ jobs:
 
     - uses: docker/setup-qemu-action@v3
 
-    - uses: docker/setup-buildx-action@v3
-
     - name: Install vcs
       run: pip3 install vcstool
 
@@ -121,4 +114,5 @@ jobs:
         cd ./cabot-common
         git checkout -b support-qemu-build origin/support-qemu-build
         cd ../
+        sed -i 's:make -j$(nproc):make -j3:' docker/opencv/Dockerfile.jetson
         ./build-docker.sh -p -i -w -c framos aarch64
