--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -85,6 +85,7 @@ jobs:
         cd ./cabot-common
         git checkout -b support-qemu-build origin/support-qemu-build
         cd ../
+        sed -i "s:make -j\$(nproc):make -j\$\(\(\$\(nproc\)>1 \? \$\(nproc\)-1 \: 1\)\):" cabot-people/docker/opencv/Dockerfile.jetson 
         ./build-docker.sh -p -i -w -c realsense aarch64
 
   build-people-framos-jetson:
@@ -113,4 +114,5 @@ jobs:
         cd ./cabot-common
         git checkout -b support-qemu-build origin/support-qemu-build
         cd ../
+        sed -i "s:make -j\$(nproc):make -j\$\(\(\$\(nproc\)>1 \? \$\(nproc\)-1 \: 1\)\):" cabot-people/docker/opencv/Dockerfile.jetson 
         ./build-docker.sh -p -i -w -c framos aarch64
