--- a/.github/workflows/check-env.yml
+++ b/.github/workflows/check-env.yml
@@ -6,6 +6,18 @@ jobs:
   check-env:
     runs-on: ubuntu-20.04
     steps:
+    - name: Maximize build space
+      run:  |
+            sudo rm -rf /usr/local/lib/android # will release about 10 GB if you don't need Android
+            sudo rm -rf /usr/share/dotnet # will release about 20GB if you don't need .NET
+            sudo rm -rf /opt/ghc
+            echo "Available storage:"
+            df -h
+
+    - uses: actions/checkout@v4
+
+    - uses: docker/setup-qemu-action@v3
+
     - name: Check environment
       run:  |
             echo $(nproc)
