--- a/.github/workflows/check-env.yml
+++ b/.github/workflows/check-env.yml
@@ -20,4 +20,7 @@ jobs:
 
     - name: Check environment
       run:  |
+            uname -m
             echo $(nproc)
+            export DOCKER_DEFAULT_PLATFORM=linux/aarch64
+            docker run ubuntu:22.04 /bin/echo "uname -m; echo $(nproc)"
