--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,6 +15,7 @@ jobs:
             sudo rm -rf /usr/share/swift
             sudo rm -rf /usr/local/.ghcup
             sudo rm -rf /usr/lib/jvm
+            sudo docker rmi $(docker image ls -aq)
             echo "Available storage:"
             df -h
 
@@ -47,6 +48,7 @@ jobs:
             sudo rm -rf /usr/share/swift
             sudo rm -rf /usr/local/.ghcup
             sudo rm -rf /usr/lib/jvm
+            sudo docker rmi $(docker image ls -aq)
             echo "Available storage:"
             df -h
 
@@ -79,6 +81,7 @@ jobs:
             sudo rm -rf /usr/share/swift
             sudo rm -rf /usr/local/.ghcup
             sudo rm -rf /usr/lib/jvm
+            sudo docker rmi $(docker image ls -aq)
             echo "Available storage:"
             df -h
 
@@ -111,6 +114,7 @@ jobs:
             sudo rm -rf /usr/share/swift
             sudo rm -rf /usr/local/.ghcup
             sudo rm -rf /usr/lib/jvm
+            sudo docker rmi $(docker image ls -aq)
             echo "Available storage:"
             df -h
 
